--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         <activity android:name=".activity.PathViewActivity" />
         <activity android:name=".activity.BezierCurveActivity" />
         <activity android:name=".activity.PathMeasureActivity" />
-        <activity android:name=".activity.SearchViewActivity"></activity>
+        <activity android:name=".activity.SearchViewActivity" />
+        <activity android:name=".activity.ZoomImageViewActivity"></activity>
     </application>
 
 </manifest>
