尝试RecyclerView的使用方法

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
         <activity android:name=".activity.TaiJiActivity" />
         <activity android:name=".activity.SmileViewActivity" />
         <activity android:name=".activity.ListViewStyleActivity" />
-        <activity android:name=".activity.ListViewPreviewActivity"></activity>
+        <activity android:name=".activity.ListViewPreviewActivity" />
+        <activity android:name=".activity.RecyclerViewActivity"></activity>
     </application>
 
 </manifest>
